Modify routes to be more like PASTA's /eml/scope/identifier/revision.

--- a/templates/identifiers.html
+++ b/templates/identifiers.html
@@ -3,7 +3,7 @@
 <table>
     {% for identifier in identifiers %}
     <tr>
-        <td><a href="/revisions/{{ scope }}/{{ identifier }}">{{ scope + "."
+        <td><a href="/eml/{{ scope }}/{{ identifier }}">{{ scope + "."
             + identifier }}</a></td>
     </tr>
     {% endfor %}
