--- a/templates/scopes.html
+++ b/templates/scopes.html
@@ -3,7 +3,7 @@
 <table>
     {% for scope in scopes %}
     <tr>
-        <td><a href="/identifiers/{{ scope }}">{{ scope }}</a></td>
+        <td><a href="/eml/{{ scope }}">{{ scope }}</a></td>
     </tr>
     {% endfor %}
 </table>
