Add bootstrap CSS components.

--- a/src/templates/identifiers.html
+++ b/src/templates/identifiers.html
@@ -1,10 +1,26 @@
-<h1>PASTA Identifiers values for Scope: {{ scope }}</h1>
+{%  extends 'bootstrap/base.html' %}
 
-<table>
-    {% for identifier in identifiers %}
-    <tr>
-        <td><a href="/eml/{{ scope }}/{{ identifier }}">{{ scope + "."
-            + identifier }}</a></td>
-    </tr>
-    {% endfor %}
-</table>
+{%  block title %}PASTA+{% endblock %}
+
+{% block navbar %}
+    <nav class="navbar navbar-inverse" role="navigation">
+        <div class="container">
+            <a class="navbar-brand" href="/">Home</a>
+        </div>
+    </nav>
+{% endblock %}
+
+{% block content %}
+    <div class="container"></div>
+    <h1>PASTA+ Data Repository</h1>
+    <h2>Catalog Browser</h2>
+    <table>
+        {% for identifier in identifiers %}
+            <tr>
+                <td><a href="/eml/{{ scope }}/{{ identifier }}">{{ scope + "."
+                    + identifier }}</a></td>
+            </tr>
+        {% endfor %}
+    </table>
+    </div>
+{% endblock %}
