--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,19 @@
-<h1>PASTA Data Repository Browser</h1>
+{%  extends 'bootstrap/base.html' %}
 
-<p>
-    For scope values: <a href="{{ scopes_url }}">Click here</a>
-</p>
+{%  block title %}PASTA+{% endblock %}
+
+{% block navbar %}
+    <nav class="navbar navbar-inverse" role="navigation">
+        <div class="container">
+            <a class="navbar-brand" href="#">Home</a>
+        </div>
+    </nav>
+{% endblock %}
+
+{%  block content %}
+    <div class="container"></div>
+        <h1>PASTA+ Data Repository</h1>
+        <h2>Catalog Browser</h2>
+        For scope values: <a href="{{ scopes_url }}">Click here</a>
+    </div>
+{%  endblock %}
