--- a/src/templates/revisions.html
+++ b/src/templates/revisions.html
@@ -1,10 +1,25 @@
-<h1>PASTA Revision values for Scope.Identifier: {{ scope + "." + identifier
-    }}</h1>
+{%  extends 'bootstrap/base.html' %}
 
-<table>
-    {% for revision in revisions %}
-    <tr>
-        <td>{{ scope + "." + identifier + "." + revision }}</td>
-    </tr>
-    {% endfor %}
-</table>
+{%  block title %}PASTA+{% endblock %}
+
+{% block navbar %}
+    <nav class="navbar navbar-inverse" role="navigation">
+        <div class="container">
+            <a class="navbar-brand" href="/">Home</a>
+        </div>
+    </nav>
+{% endblock %}
+
+{% block content %}
+    <div class="container"></div>
+        <h1>PASTA+ Data Repository</h1>
+        <h2>Catalog Browser</h2>
+        <table>
+            {% for revision in revisions %}
+            <tr>
+                <td>{{ scope + "." + identifier + "." + revision }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+{% endblock %}
