Add div classes for container and table.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {%  block content %}
-    <div class="container"></div>
+    <div class="container">
         <h1>PASTA+ Data Repository</h1>
         <h2>Catalog Browser</h2>
         For scope values: <a href="{{ scopes_url }}">Click here</a>
