--- a/src/templates/scopes.html
+++ b/src/templates/scopes.html
@@ -11,14 +11,16 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container"></div>
+    <div class="container">
         <h1>PASTA+ Data Repository</h1>
         <h2>Catalog Browser</h2>
-        <table>
+        <table class="table">
             {% for scope in scopes %}
+            <div class="row">
                 <tr>
                     <td><a href="/eml/{{ scope }}">{{ scope }}</a></td>
                 </tr>
+            </div>
             {% endfor %}
         </table>
     </div>
