--- a/src/templates/revisions.html
+++ b/src/templates/revisions.html
@@ -11,10 +11,10 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container"></div>
+    <div class="container">
         <h1>PASTA+ Data Repository</h1>
         <h2>Catalog Browser</h2>
-        <table>
+        <table class="table">
             {% for revision in revisions %}
             <tr>
                 <td>{{ scope + "." + identifier + "." + revision }}</td>
